--- a/FileSyncDesktop/Styles/RoundButtons.xaml
+++ b/FileSyncDesktop/Styles/RoundButtons.xaml
@@ -34,10 +34,29 @@
 
     <Style TargetType="Button">
         <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="FontSize" Value="12" />
-        <Setter Property="Foreground" Value="{StaticResource TextBoxBorder}" />
-        <Setter Property="Background" Value="{StaticResource OffWhiteBrush}" />
+        <Setter Property="Foreground" Value="{StaticResource PrimaryBlackColorBrush}" />
+        <Setter Property="Background" Value="{StaticResource PrimaryLightGrayColorBrush}" />
         <Setter Property="Margin" Value="2" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{StaticResource PrimaryLightBlueColorBrush}" />
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="{StaticResource PrimaryDarkBlueColorBrush}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
     
 </ResourceDictionary>
